cmake_minimum_required(VERSION 3.17)
project(farid_labs)

set(CMAKE_CXX_STANDARD 17)

add_executable(2.B 2_module/B_anon.cpp)
add_executable(2.C 2_module/C_anon.cpp)
add_executable(2.D 2_module/D_anon.cpp)

add_executable(3.A 3_module/A_anon.cpp)
add_executable(3.B 3_module/B_anon.cpp)
add_executable(3.C 3_module/C_anon.cpp)
